--- a/services/client/Dockerfile-dev
+++ b/services/client/Dockerfile-dev
@@ -8,7 +8,7 @@ WORKDIR /usr/src/app
 # add `/usr/src/app/node_modules/.bin` to $PATH
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
-#RUN npm i npm@latest -g
+RUN npm i npm@latest -g
 
 # install and cache app dependencies
 COPY ./package.json /usr/src/app/package.json
